// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Simulering > Gitt at brukeren IKKE samtykker > Når brukeren ikke velger AFP, viser kun inntekt og alderspensjon 1`] = `
[
  <g
    class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-0"
    data-z-index="1"
    transform="translate(0,-5)"
  >
    <rect
      class="highcharts-point"
      data-z-index="3"
      fill="var(--a-gray-500)"
      height="14"
      rx="7"
      ry="7"
      width="14"
      x="1"
      y="6"
    />
  </g>,
  <g
    class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-1"
    data-z-index="1"
    transform="translate(33,-5)"
  >
    <rect
      class="highcharts-point"
      data-z-index="3"
      fill="var(--a-deepblue-500)"
      height="14"
      rx="7"
      ry="7"
      width="14"
      x="1"
      y="6"
    />
  </g>,
]
`;

exports[`Simulering > Gitt at brukeren IKKE samtykker > Når brukeren velger AFP-privat, viser inntekt, alderspensjon og AFP 1`] = `
[
  <g
    class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-0"
    data-z-index="1"
    transform="translate(0,-5)"
  >
    <rect
      class="highcharts-point"
      data-z-index="3"
      fill="var(--a-gray-500)"
      height="14"
      rx="7"
      ry="7"
      width="14"
      x="1"
      y="6"
    />
  </g>,
  <g
    class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-1"
    data-z-index="1"
    transform="translate(33,-5)"
  >
    <rect
      class="highcharts-point"
      data-z-index="3"
      fill="var(--a-purple-400)"
      height="14"
      rx="7"
      ry="7"
      width="14"
      x="1"
      y="6"
    />
  </g>,
  <g
    class="highcharts-legend-item highcharts-column-series highcharts-color-undefined highcharts-series-2"
    data-z-index="1"
    transform="translate(66,-5)"
  >
    <rect
      class="highcharts-point"
      data-z-index="3"
      fill="var(--a-deepblue-500)"
      height="14"
      rx="7"
      ry="7"
      width="14"
      x="1"
      y="6"
    />
  </g>,
]
`;
